--- a/packages/example/src/docs/index.mdx
+++ b/packages/example/src/docs/index.mdx
@@ -1,10 +1,7 @@
 ---
-title: Z First Page
-menu: Overview
-order: 0
+title: About
 description: Radix is a design system built with Modulz, for Modulz.
 ---
-
 
 ### Installing Radix
 
