--- a/packages/example/src/docs/getting-started.mdx
+++ b/packages/example/src/docs/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started
-description: Radix is a design system built with Modulz, for Modulz.
+description: Radix is a design system built with Test, for Test.
 ---
 
 <!-- Radix is a Component Library built on top of [Radix System](/docs/radix-system). -->
@@ -10,14 +10,13 @@ description: Radix is a design system built with Modulz, for Modulz.
 Radix is currently under heavy development, but can be installed by running either of these commands:
 
 ```
-npm install @modulz/radix
+npm install
 ```
 
 <br />
 or
 
 ```
-yarn add @modulz/radix
 ```
 
 ### Radix Provider
@@ -25,7 +24,7 @@ yarn add @modulz/radix
 Make sure to wrap your app in `RadixProvider` to get the default theme:
 
 ```js
-import { RadixProvider } from '@modulz/radix';
+import { RadixProvider } from '@test/radix';
 
 const App = () => <RadixProvider>Hey there👋</RadixProvider>;
 ```
@@ -35,5 +34,5 @@ const App = () => <RadixProvider>Hey there👋</RadixProvider>;
 All components can be imported directly:
 
 ```js
-import { Heading, Text, Link } from '@modulz/radix';
+import { Heading, Text, Link } from '@reasr/radix';
 ```
