--- a/packages/example/src/docs/index.mdx
+++ b/packages/example/src/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: About
-description: Radix is a design system built with Modulz, for Modulz.
+description: Radix is a design system built with test, for test.
 ---
 
 ### Installing Radix
@@ -8,14 +8,14 @@ description: Radix is a design system built with Modulz, for Modulz.
 Radix is currently under heavy development, but can be installed by running either of these commands:
 
 ```
-npm install @modulz/radix
+npm install @test/radix
 ```
 
 <br />
 or
 
 ```
-yarn add @modulz/radix
+yarn add @test/radix
 ```
 
 ### Radix Provider
@@ -23,7 +23,7 @@ yarn add @modulz/radix
 Make sure to wrap your app in `RadixProvider` to get the default theme:
 
 ```js
-import { RadixProvider } from '@modulz/radix';
+import { RadixProvider } from '@test/radix';
 
 const App = () => <RadixProvider>Hey there👋</RadixProvider>;
 ```
@@ -33,5 +33,5 @@ const App = () => <RadixProvider>Hey there👋</RadixProvider>;
 All components can be imported directly:
 
 ```js
-import { Heading, Text, Link } from '@modulz/radix';
+import { Heading, Text, Link } from '@test/radix';
 ```
