--- a/packages/example/src/docs/button.mdx
+++ b/packages/example/src/docs/button.mdx
@@ -1,6 +1,6 @@
 ---
 title: Button
-description: Useful to communicate actions to your users.
+description: Useful to communicate actions to your users. Useful to communicate actions to your users. Useful to communicate actions to your users.
 status: Stable
 source: https://github.com/path/to/code
 ---
