--- a/packages/example/src/docs/alert.mdx
+++ b/packages/example/src/docs/alert.mdx
@@ -4,7 +4,7 @@ description: Useful to communicate actions to your users.
 status: Deprecated
 ---
 
-```js live gray
+```js live
 <p>New project</p>
 ```
 
