--- a/packages/example/src/docs/button.mdx
+++ b/packages/example/src/docs/button.mdx
@@ -71,7 +71,7 @@ There are 4 colors to choose from.
 
 There are 2 sizes to choose from.
 
-```js live gray
+```js live
 <button>New project</button>
 ```
 
