update live scope

--- a/packages/example/src/docs/alert.mdx
+++ b/packages/example/src/docs/alert.mdx
@@ -4,7 +4,7 @@ description: Useful to communicate actions to your users.
 ---
 
 ```js live
-<button>New project</button>
+<Example></Example>
 ```
 
 ## Props
