--- a/packages/example/src/docs/alert.mdx
+++ b/packages/example/src/docs/alert.mdx
@@ -70,7 +70,7 @@ There are 4 colors to choose from.
 
 ### Sizes
 
-```js live
+```js live toggle
 <button>Sizes</button>
 ```
 
@@ -78,6 +78,6 @@ There are 4 colors to choose from.
 
 If true, when the user clicks inside the text box the current value will be selected. Use this if the user is likely to delete all the text anyway (like the URL bar in browsers)
 
-```js live
+```js live open toggle
 <button>Waiting</button>
 ```
